[gd_scene load_steps=21 format=2]

[ext_resource path="res://Skripte/NPC_SL.gd" type="Script" id=1]
[ext_resource path="res://Skripte/Door_F.gd" type="Script" id=2]
[ext_resource path="res://Grafiken/flur.png" type="Texture" id=3]
[ext_resource path="res://Skripte/Flur.gd" type="Script" id=4]
[ext_resource path="res://Grafiken/NPC_SL-sheet.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 75.2423, 205.163 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 75, 148 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 75, 0, 75, 148 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 150, 0, 75, 148 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 225, 0, 75, 148 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 75, 148 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 375, 0, 75, 148 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=9]
font_path = "res://MadeleinaSans-2VY3.ttf"

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = SubResource( 9 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://MadeleinaSans-2VY3.ttf"

[sub_resource type="DynamicFont" id=12]
size = 26
font_data = SubResource( 11 )

[sub_resource type="Animation" id=13]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect/Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=14]

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect/Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[node name="Flur" type="Node2D"]
script = ExtResource( 4 )

[node name="Flur" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="Door_F" type="Area2D" parent="."]
modulate = Color( 0.870588, 0.917647, 0.0196078, 1 )
show_behind_parent = true
script = ExtResource( 2 )

[node name="Node2D" type="CollisionPolygon2D" parent="Door_F"]
modulate = Color( 0.698039, 0.788235, 0.054902, 0.341176 )
position = Vector2( -63.5449, -14.2906 )
scale = Vector2( 0.943097, 0.778943 )
polygon = PoolVector2Array( 651.624, 264.834, 721.606, 267.402, 725.848, 448.416, 650.564, 449.7 )

[node name="NPC_SL" type="Area2D" parent="." groups=["NPCs"]]
position = Vector2( 438, 356 )
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="NPC_SL"]
position = Vector2( -232.076, 38.3774 )
shape = SubResource( 1 )

[node name="NPC_SL" type="AnimatedSprite" parent="NPC_SL"]
position = Vector2( -231.736, 43.2663 )
scale = Vector2( 2.98742, 2.98636 )
frames = SubResource( 8 )

[node name="ColorRect" type="ColorRect" parent="NPC_SL"]
margin_left = -157.0
margin_top = -325.0
margin_right = 121.0
margin_bottom = -61.0

[node name="Label" type="Label" parent="NPC_SL/ColorRect"]
margin_left = 13.0
margin_top = 12.0
margin_right = 269.0
margin_bottom = 219.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "Da hinten ist der NWT Fachraum, den Weg hast du bereits gefunden. Hast du Lust, mehr Ã¼ber NWT zu erfahren?"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="NPC_SL/ColorRect"]
margin_left = 127.0
margin_top = 233.0
margin_right = 174.0
margin_bottom = 259.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "OK"

[node name="AnimationPlayer" type="AnimationPlayer" parent="NPC_SL"]
anims/Dialog = SubResource( 13 )
"anims/Neue Animation" = SubResource( 14 )
anims/RESET = SubResource( 15 )

[connection signal="input_event" from="Door_F" to="Door_F" method="_on_Door_F_input_event"]
[connection signal="mouse_entered" from="Door_F" to="Door_F" method="_on_Door_F_mouse_entered"]
[connection signal="mouse_exited" from="Door_F" to="Door_F" method="_on_Door_F_mouse_exited"]
[connection signal="input_event" from="NPC_SL" to="NPC_SL" method="_on_NPC_SL_input_event"]
[connection signal="mouse_entered" from="NPC_SL" to="NPC_SL" method="_on_NPC_SL_mouse_entered"]
[connection signal="mouse_exited" from="NPC_SL" to="NPC_SL" method="_on_NPC_SL_mouse_exited"]
[connection signal="gui_input" from="NPC_SL/ColorRect/Label2" to="NPC_SL" method="_on_Label2_gui_input"]
